--- a/config/basic.yaml
+++ b/config/basic.yaml
@@ -3,17 +3,21 @@
 # You are supposed to set at least Dynamixel ID
 servo0:
   ID: 1
+  Velocity_Limit: 1
   Return_Delay_Time: 0
-  Operating_Mode: 3
+  Operating_Mode: 4
 servo1:
   ID: 2
+  Velocity_Limit: 1
   Return_Delay_Time: 0
-  Operating_Mode: 3
+  Operating_Mode: 4
 servo2:
   ID: 3
+  Velocity_Limit: 1
   Return_Delay_Time: 0
-  Operating_Mode: 3
+  Operating_Mode: 4
 servo3:
   ID: 4
+  Velocity_Limit: 1
   Return_Delay_Time: 0
-  Operating_Mode: 3
+  Operating_Mode: 4
